--- a/index.html
+++ b/index.html
@@ -7,36 +7,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:hotpink">
+        <a class="navbar-brand" href="#">Homework 5</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="function1.html">Function 1 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function2.html">Function 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function3.html">Function 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function4.html">Function 4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function5.html">Function 5</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <p id="placeholder"></p>
         <button class="btn" onclick='writeValue()'>Click me</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-      function writeValue() {
-        document.getElementById('placeholder').innerHTML = 'This is the value';
-      }
-    </script>
-</body>
-</html>
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JavaScript</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container">
-        <p id="placeholder"></p>
-        <button class="btn" onclick='writeValue()'>Click me</button>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script>
-      function writeValue() {
-        document.getElementById('placeholder').innerHTML = 'This is the value';
-      }
+        function writeValue() {
+            document.getElementById('placeholder').innerHTML = 'This is the value';
+        }
     </script>
 </body>
 </html>
