--- a/function1.html
+++ b/function1.html
@@ -32,6 +32,16 @@
             </ul>
         </div>
     </nav>
-    <h1>Homework 5: JavaScript!!!</h1>
+    <h1>Click Me Function</h1>
+    <div class="container">
+        <p id="placeholder"></p>
+        <button class="btn" onclick='writeValue()'>Click Me for a Surprise</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script>
+        function writeValue() {
+            document.getElementById('placeholder').innerHTML = 'Yay! You clicked me!';
+        }
+    </script>
 </body>
 </html>
