--- a/function2.html
+++ b/function2.html
@@ -32,16 +32,15 @@
             </ul>
         </div>
     </nav>
-    <h1>Function 2</h1>
+    <h1 style="text-align:center">Function 2</h1>
     <div class="container">
         <p id="placeholder"></p>
-        <button class="btn" onclick='writeValue()'>Click Me for a Surprise</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        function writeValue() {
-            document.getElementById('placeholder').innerHTML = 'Yay! You clicked me!';
-        }
+        let firstName = prompt("What is your first name");
+        let lastName = prompt("What is your last name");
+        let fullName = firstName + " " + lastName;
     </script>
 </body>
 </html>
