--- a/function3.html
+++ b/function3.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <h1>Function 3</h1>
+    <h1 style="text-align:center">Function 3</h1>
     <div class="container">
         <p id="placeholder"></p>
         <button class="btn" onclick='writeValue()'>Click Me for a Surprise</button>
