--- a/function2.html
+++ b/function2.html
@@ -41,6 +41,7 @@
         let firstName = prompt("What is your first name");
         let lastName = prompt("What is your last name");
         let fullName = firstName + " " + lastName;
+        alert(fullName);
     </script>
 </body>
 </html>
