--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             </ul>
         </div>
     </nav>
-    <h1>Homework 5: JavaScript!!!</h1>
+    <h1 style="text-align:center">Homework 5: JavaScript!!!</h1>
 </body>
 </html>
