--- a/function2.html
+++ b/function2.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align:center">Function 2</h1>
+    <h1 style="text-align:center">Alert</h1>
     <div class="container">
         <p id="placeholder"></p>
     </div>
@@ -41,7 +41,7 @@
         let firstName = prompt("What is your first name");
         let lastName = prompt("What is your last name");
         let fullName = firstName + " " + lastName;
-        alert(fullName);
+        alert('Hi '+fullName+'!');
     </script>
 </body>
 </html>
