--- a/function2.html
+++ b/function2.html
@@ -37,11 +37,17 @@
         <p id="placeholder"></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <p id="placeholder"></p>
     <script>
         let firstName = prompt("What is your first name");
         let lastName = prompt("What is your last name");
         let fullName = firstName + " " + lastName;
-        alert('Hi '+fullName+'!');
+        alert('Hi ' + fullName + '!');
+
+        function writeValue() {
+            document.getElementById('placeholder').innerHTML = 'You made function 2 with JavaScript work!!';
+        }
     </script>
+
 </body>
 </html>
