--- a/function2.html
+++ b/function2.html
@@ -35,17 +35,15 @@
     <h1 style="text-align:center">Alert</h1>
     <div class="container">
         <p id="placeholder"></p>
+        <button class="btn" onclick='alertFunction()'>Alert Button! Press Me!</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <p id="placeholder"></p>
     <script>
-        let firstName = prompt("What is your first name");
-        let lastName = prompt("What is your last name");
-        let fullName = firstName + " " + lastName;
-        alert('Hi ' + fullName + '!');
-
-        function writeValue() {
-            document.getElementById('placeholder').innerHTML = 'You made function 2 with JavaScript work!!';
+        function alertFunction() {
+            let firstName = prompt("What is your first name");
+            let lastName = prompt("What is your last name");
+            let fullName = firstName + " " + lastName;
+            alert('Hi ' + fullName + '!');
         }
     </script>
 
