--- a/function3.html
+++ b/function3.html
@@ -1,38 +1,12 @@
-<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JavaScript</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tic-tac-toe</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body onload="initialize()">
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FF69B4">
-        <a class="navbar-brand" href="#">Homework 5</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="function1.html">Function 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="function2.html">Function 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="function3.html">Function 3</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="function4.html">Function 4</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="function5.html">Function 5</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <h1 style="text-align:center">Tic-Tac-Toe</h1>
+    <h1>Tic-Tac-Toe</h1>
     <table id="table_game">
         <tr><td class="td_game"><div id="cell0" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell1" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell2" onclick="cellClicked(this.id)" class="fixed"></div></td></tr>
         <tr><td class="td_game"><div id="cell3" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell4" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell5" onclick="cellClicked(this.id)" class="fixed"></div></td></tr>
