--- a/function3.html
+++ b/function3.html
@@ -1,51 +1,53 @@
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-tac-toe</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JavaScript</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body onload="initialize()">
-    <h1>Tic-Tac-Toe</h1>
-    <table id="table_game">
-        <tr><td class="td_game"><div id="cell0" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell1" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell2" onclick="cellClicked(this.id)" class="fixed"></div></td></tr>
-        <tr><td class="td_game"><div id="cell3" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell4" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell5" onclick="cellClicked(this.id)" class="fixed"></div></td></tr>
-        <tr><td class="td_game"><div id="cell6" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell7" onclick="cellClicked(this.id)" class="fixed"></div></td><td class="td_game"><div id="cell8" onclick="cellClicked(this.id)" class="fixed"></div></td></tr>
-    </table>
-    <div id="restart" title="Start new game" onclick="restartGame(true)"><span style="vertical-align:top;position:relative;top:-10px">#</span></div>
-    <table>
-        <tr><th class="th_list">Computer</th><th class="th_list" style="padding-right:10px;padding-left:10px">Draws</th><th class="th_list">Player</th></tr>
-        <tr><td class="td_list" id="computer_score">0</td><td class="td_list" style="padding-right:10px;padding-left:10px" id="tie_score">0</td><td class="td_list" id="player_score">0</td></tr>
-    </table>
-    <!-- The modal dialog for announcing the winner -->
-    <div id="winAnnounce" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('winAnnounce')">&times;</span>
-            <p id="winText"></p>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FF69B4">
+        <a class="navbar-brand" href="#">Homework 5</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="function1.html">Function 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function2.html">Function 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function3.html">Function 3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function4.html">Function 4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="function5.html">Function 5</a>
+                </li>
+            </ul>
         </div>
+    </nav>
+    <h1 style="text-align:center">Alert</h1>
+    <div class="container">
+        <p id="placeholder"></p>
+        <button class="btn" onclick='alertFunction()'>Alert Button! Press Me!</button>
     </div>
-    <!-- The dialog for getting feedback from the user -->
-    <div id="userFeedback" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <p id="questionText"></p>
-            <p><button id="yesBtn">Yes</button>&nbsp;<button id="noBtn">No</button></p>
-        </div>
-    </div>
-    <!-- The options dialog -->
-    <div id="optionsDlg" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <h2>How would you like to play?</h2>
-            <h3>Difficulty:</h3>
-            <label><input type="radio" name="difficulty" id="r0" value="0">easy&nbsp;</label>
-            <label><input type="radio" name="difficulty" id="r1" value="1" checked>hard</label><br>
-            <h3>Play as:</h3>
-            <label><input type="radio" name="player" id="rx" value="x" checked>X (go first)&nbsp;</label>
-            <label><input type="radio" name="player" id="ro" value="o">O<br></label>
-            <p><button id="okBtn" onclick="getOptions()">Play</button></p>
-        </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script>
+        const num1 = 20;
+        const num2 = 3;
+
+        function multiplyAmount() {
+            return num1 * num2;
+        }
+
+        multiplyAmount(); 
+    </script>
+
 </body>
 </html>
