--- a/function3.html
+++ b/function3.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align:center">Multiplication</h1>
+    <h1 style="text-align:center">Printing Multiplication</h1>
     <div class="container">
         <p id="placeholder"></p>
         <button class="btn" onclick='multiplyAmount()'>Multiply :)</button>
@@ -45,8 +45,7 @@
         function multiplyAmount() {
             return num1 * num2;
         }
-
-        print(num1*num2); 
+        print(multiplyAmount);
     </script>
 
 </body>
