--- a/function3.html
+++ b/function3.html
@@ -39,13 +39,13 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        const num1 = 20;
-        const num2 = 3;
+        function multiplyAmount(n1, n2) {
 
-        function multiplyAmount() {
-            return num1 * num2;
+            n1 = 20;
+            n2 = 2;
+
+            return n1 * n2;
         }
-        print(multiplyAmount);
     </script>
 
 </body>
