--- a/function3.html
+++ b/function3.html
@@ -32,19 +32,16 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align:center">Printing Multiplication</h1>
+    <h1 style="text-align:center">Multiplication</h1>
     <div class="container">
         <p id="placeholder"></p>
-        <button class="btn" onclick='multiplyAmount()'>Multiply :)</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        function multiplyAmount(n1, n2) {
+        let x = multiplyAmount(20, 2);
 
-            n1 = 20;
-            n2 = 2;
-
-            return n1 * n2;
+        function multiplyAmount(a, b) {
+            return a * b;    
         }
     </script>
 
