--- a/function3.html
+++ b/function3.html
@@ -35,12 +35,13 @@
     <h1 style="text-align:center">Multiplication</h1>
     <div class="container">
         <p id="placeholder"></p>
+        <button class="btn" onclick='multiplyFunction()'> Multiply 20 x 2</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        let x = multiplyAmount(20, 2);
+        let x = multiplyFunction(20, 2);
 
-        function multiplyAmount(a, b) {
+        function multiplyFunction(a, b) {
             return a * b;    
         }
     </script>
