--- a/function3.html
+++ b/function3.html
@@ -42,7 +42,7 @@
         let x = multiplyFunction(20, 2);
 
         function multiplyFunction(a, b) {
-            return a * b;    
+            document.getElementById('placeholder').innerHTML= return a * b;    
         }
     </script>
 
