--- a/function3.html
+++ b/function3.html
@@ -42,8 +42,10 @@
         let x = multiplyFunction(20, 2);
 
         function multiplyFunction(a, b) {
-            document.getElementById('placeholder').innerHTML= return a * b;    
+            return a * b;
         }
+
+        document.getElementById("placeholder").innerHTML = a * b;
     </script>
 
 </body>
