--- a/function3.html
+++ b/function3.html
@@ -45,7 +45,7 @@
             return a * b;
         }
 
-        document.getElementById("placeholder").innerHTML = multiplyFunction();
+        document.getElementById("placeholder").innerHTML = x;
     </script>
 
 </body>
