--- a/function4.html
+++ b/function4.html
@@ -32,16 +32,19 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align:center">Function 4</h1>
+    <h1 style="text-align:center">Celsius to Fahrenheit Conversion</h1>
     <div class="container">
+        <button class="btn" onclick='celsiusToFahrenheit()'>Click Me for 0 degrees Celsius in Fahrenheit!</button>
         <p id="placeholder"></p>
-        <button class="btn" onclick='writeValue()'>Click Me for a Surprise</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        function writeValue() {
-            document.getElementById('placeholder').innerHTML = 'Yay! You clicked me!';
+        function celsiusToFahrenheit(celsius) {
+            return (celsius * 9 / 5) + 32; //Conversion formula
         }
+
+        document.getElementById("placeholder").innerHTML = celsiusToFahrenheit(0);
+
     </script>
 </body>
 </html>
