--- a/function4.html
+++ b/function4.html
@@ -34,7 +34,7 @@
     </nav>
     <h1 style="text-align:center">Celsius to Fahrenheit Conversion</h1>
     <div class="container">
-        <button class="btn" onclick='celsiusToFahrenheit()'>Click Me for 0 degrees Celsius in Fahrenheit!</button>
+        <h2> 0 degrees Celsius in Fahrenheit!</h2>
         <p id="placeholder"></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
