--- a/function5.html
+++ b/function5.html
@@ -32,16 +32,21 @@
             </ul>
         </div>
     </nav>
-    <h1 style="text-align:center">Function 5</h1>
+    <h1 style="text-align:center">Display an Image</h1>
     <div class="container">
         <p id="placeholder"></p>
-        <button class="btn" onclick='writeValue()'>Click Me for a Surprise</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-        function writeValue() {
-            document.getElementById('placeholder').innerHTML = 'Yay! You clicked me!';
+        function displayImage(src, width, height) {
+            var img = document.createElement("img");
+            img.src = src;
+            img.width = width;
+            img.height = height;
+            document.body.appendChild(img);
         }
+
+        document.getElementById("placeholder").innerHTML = displayImage("https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png",500,500);
     </script>
 </body>
 </html>
