--- a/function5.html
+++ b/function5.html
@@ -33,9 +33,7 @@
         </div>
     </nav>
     <h1 style="text-align:center">Display an Image</h1>
-    <div class="container">
-        <p id="placeholder">Turkey</p>
-    </div>
+        <p id="placeholder"></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
         function displayImage(src, width, height) {
