--- a/function5.html
+++ b/function5.html
@@ -46,7 +46,7 @@
                 document.body.appendChild(img);
             }
 
-            document.getElementById("placeholder").innerHTML = displayImage("https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png", 500, 500);
+            //document.getElementById("placeholder").innerHTML = displayImage("https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png", 500, 500);
         </script>
 </body>
 </html>
