--- a/function5.html
+++ b/function5.html
@@ -38,13 +38,13 @@
     </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script>
-            function displayImage(src, width, height) {
+            //function displayImage(src, width, height) {
                 var img = document.createElement("img");
                 img.src = src;
                 img.width = width;
                 img.height = height;
                 document.body.appendChild(img);
-            }
+           // }
 
             //document.getElementById("placeholder").innerHTML = displayImage("https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png", 500, 500);
         </script>
