--- a/function5.html
+++ b/function5.html
@@ -40,9 +40,9 @@
         <script>
             //function displayImage(src, width, height) {
                 var img = document.createElement("img");
-                img.src = src;
-                img.width = width;
-                img.height = height;
+                img.src = "https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png";
+                img.width = 500;
+                img.height = 500;
                 document.body.appendChild(img);
            // }
 
