--- a/function5.html
+++ b/function5.html
@@ -43,7 +43,7 @@
                 img.src = "https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png";
                 img.width = 500;
                 img.height = 500;
-                document.body.appendChild(img);
+                document.getElementById("placeholder").appendChild(img);
            // }
 
             //document.getElementById("placeholder").innerHTML = displayImage("https://cdn.pixabay.com/photo/2016/04/01/09/08/turkey-1299176__340.png", 500, 500);
